RESOLVED FIXED193987
[iOS] REGRESSION (r238635): Text area fails to re-focus after dismissal of keyboard on support.apple.com
https://bugs.webkit.org/show_bug.cgi?id=193987
Summary [iOS] REGRESSION (r238635): Text area fails to re-focus after dismissal of ke...
Daniel Bates
Reported 2019-01-29 15:11:41 PST
Seen on iOS. Steps to reproduce: The following steps assume that a hardware keyboard is not connected. 1. Visit <https://support.apple.com/guide/iphone/welcome/ios> and scroll to the bottom of the page. 2. Tap Yes. 3. Focus the comment field to bring up the keyboard. 4. Dismiss the keyboard by pressing Done or the keyboard hide button. 5. Tap the comment field again. Then the text field should show the number of characters remaining in the upper right corner. But it does not (*). (*) Once you are in this state then to have the number of remaining characters indicator shown you have to defocus the field and focus it again, say by tapping the background and then tapping the field.
Attachments
Patch (6.45 KB, patch)
2019-01-29 16:27 PST, Daniel Bates
thorton: review+
Daniel Bates
Comment 1 2019-01-29 15:11:59 PST
Daniel Bates
Comment 2 2019-01-29 16:27:10 PST
Tim Horton
Comment 3 2019-01-29 16:58:30 PST
Comment on attachment 360521 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=360521&action=review > Source/WebKit/ChangeLog:9 > + It is unncessary to relinquish first responder status when a user explicitly dismissing unnecessary
Daniel Bates
Comment 4 2019-01-30 20:41:43 PST
Note You need to log in before you can comment on or make changes to this bug.