Source/WebKit/Platform/spi/ios/UIKitSPI.h
@@ -1145,6 +1145,8 @@ extern NSString * const UIWindowDidRotateNotification;
 extern NSString * const UIWindowNewScreenUserInfoKey;
 extern NSString * const UIWindowWillRotateNotification;
 
+extern NSString * const UIKeyboardPrivateDidRequestDismissalNotification;
+
 extern NSString * const UIKeyboardIsLocalUserInfoKey;
 
 extern UIApplication *UIApp;
