Source/WebKit/UIProcess/ios/WKContentViewInteraction.h
@@ -306,6 +306,8 @@ struct WKAutoCorrectionData {
     BOOL _showDebugTapHighlightsForFastClicking;
     BOOL _isZoomingToRevealFocusedElement;
 
+    BOOL _keyboardDidRequestDismissal;
+
     BOOL _becomingFirstResponder;
     BOOL _resigningFirstResponder;
     BOOL _needsDeferredEndScrollingSelectionUpdate;
